[tool.poetry]
name = "dolphinleaf"
version = "0.1.1"
description = ""
authors = ["Luciano Lim <s1000162519@stu.rowlandschools.org>"]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
